@@ -18,12 +18,13 @@
  ***************************************************************************/
 
 
-/*-------------------------------BaseManager-------------------------------*\
-|   This is basic manager with cache ability.                               |
+/*-------------------------PersistentObjectManager-------------------------*\
+|   This is a singleton object managing PersistentObjects                   |
 |                                                                           |
 |                                                                           |
 |   Changelog :                                                             |
 |               07/20/2007 - Paf - Initial release                          |
+|               08/16/2007 - Paf - Update comments                          |
 |                                                                           |
 \*-------------------------------------------------------------------------*/
 
@@ -46,14 +47,28 @@ namespace Viracocha {
 
 	namespace Core {
 
-
+		/**
+		 * PersistentObjectManager is a singleton managing PersistentObject instances.</br>
+		 * It can load/save from any Source and provide a cache to improve performance (using LRU)
+		 */
 		class PersistentObjectManager : public BaseManager<PersistentObject>, public Singleton<PersistentObjectManager>
 		{
 
-			protected:
+			private:
 
+				/**
+				 * This method loads a PersistentObject from a stream
+				 * @param _stream Stream from which the ressource will be extracted
+				 * @return Smart pointer to the newly created object
+				 */
 				virtual shared_ptr<PersistentObject> loadImpl( shared_ptr<IStream> _stream);
 
+				/**
+				 * This method saves a PersistentObject to a stream
+				 * @param _stream Stream to which the ressource will be saved
+				 * @param _obj Smart pointer to the object to be saved
+				 * @return The successfulness of this operation
+				 */
 				virtual bool saveImpl( shared_ptr<IStream> _stream, shared_ptr<PersistentObject> _obj);
 
 			public:
